--- a/style.css
+++ b/style.css
@@ -55,3 +55,19 @@ h1{
     background-repeat: no-repeat;
     background-position: left;
 }
+.experienceitem{
+    border-left: 10px solid;
+}
+#web{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#full{
+    border-left: 7px solid;
+    border-image: linear-gradient(purple, tomato);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
+}
